# Frosted-Cookies

./: README.md  cookiecutter.sh  flake.nix  result
java/{{ cookiecutter.project_slug }}/: pom.xml
latex/: cookiecutter.json  flake.nix  package.nix
latex/src/: document.tex
python/hooks/: post_gen_project
python/scripting/: .gitignore  cookiecutter.json  flake.nix  main.py
python/{{ cookiecutter.project_slug }}/: LICENSE.txt  pyproject.toml
src/java/{{ cookiecutter.project_slug }}/: .gitignore
src/latex/: flake.nix
src/python-scripting/: flake.nix
src/rust/: cookiecutter.json
src/rust/{{ cookiecutter.project_slug }}/: README.md
src/trivial/: flake.nix
src/ts-bun/: bun.lockb
src/ts-node/{{ cookiecutter.project_slug }}/: flake.nix
templates/cpp/: Makefile  cookiecutter.json
templates/cpp/{{ cookiecutter.project_slug }}/: Makefile  flake.nix
templates/java/: cookiecutter.json
templates/java/{{ cookiecutter.project_slug }}/: flake.nix
templates/nixos/: cookiecutter.json
templates/nixos/{{ cookiecutter.project_slug }}/: flake.nix
templates/python-poetry/{{ cookiecutter.project_slug }}/: .gitignore  flake.nix
templates/python-scripting/: cookiecutter.json  flake.nix
templates/python-scripting/{{ cookiecutter.project_slug }}/: flake.nix
templates/trivial/: cookiecutter.json  flake.nix
templates/ts-bun/: cookiecutter.json
templates/typst/: cookiecutter.json  flake.nix
trivial/: flake.nix
tsjs/bun/: README.md  build.ts  flake.nix
tsjs/node/: cookiecutter.json
typescript/{{ cookiecutter.project_slug }}/: bundle.js
(+16 files in other folders)
